# mandarinfish

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  deployment.yaml  elastic.yaml  kibana.yaml  main.cc  start.sh
src/: streaming.cc  streaming.h
